--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">BaseApplication</string>
+    <string name="app_name">WorldMoney</string>
+    <string name="exchange_api">4f73a3e923e3922e3e85b3b1fea09c6a</string>
+
+
 </resources>
